# backend/api/app/models.py
from __future__ import annotations

from typing import Optional
from uuid import UUID, uuid4
from datetime import datetime, date
from decimal import Decimal
from enum import Enum

from sqlmodel import SQLModel, Field
from sqlalchemy import Column, Enum as SAEnum, Numeric, UniqueConstraint

# --------------------
# Python enums
# --------------------
class CategoryKind(str, Enum):
    """Kind of category indicating whether it represents an expense or income.

    Used to classify categories and transactions as either costs (expense)
    or earnings (income).
    """
    EXPENSE = "expense"
    INCOME = "income"

class TransactionSource(str, Enum):
    """Source of a transaction describing how it was created.

    MANUAL: created by a user interaction.
    RECURRING: generated by a scheduled/recurring process.
    """
    MANUAL = "manual"
    RECURRING = "recurring"

# TransactionType is the same as CategoryKind (alias)
TransactionType = CategoryKind

class MembershipRole(str, Enum):
    """Role assigned to a membership within a tenant.

    OWNER has full control, MEMBER has standard access, VIEWER has read-only access.
    """
    OWNER = "owner"
    MEMBER = "member"
    VIEWER = "viewer"

class MembershipStatus(str, Enum):
    """Lifecycle status for a membership or invite.

    ACTIVE: membership is active and usable.
    PENDING: invite sent or awaiting acceptance.
    REVOKED: membership or invite has been revoked.
    """
    ACTIVE = "active"
    PENDING = "pending"
    REVOKED = "revoked"

class AccountType(str, Enum):
    """Type of a financial account, affecting expected behavior and balance handling.

    CASH: cash-like accounts, DEBIT: bank/debit accounts, CREDIT: credit card accounts.
    """
    CASH = "cash"
    DEBIT = "debit"
    CREDIT = "credit"

class Currency(str, Enum):
    """Supported currency codes used for monetary fields across the models."""
    BRL = "BRL"
    USD = "USD"
    EUR = "EUR"

class ShareVisibility(str, Enum):
    """Controls whether an account's balance is visible to a membership."""
    HIDDEN = "hidden"
    VISIBLE = "visible"

# --------------------
# Models
# --------------------
class User(SQLModel, table=True):
    """Represents an application user.

    Attributes:
        id: Unique identifier for the user.
        email: Login email address (indexed).
        password_hash: Hashed password for authentication.
        name: Optional display name.
        created_at: Timestamp when the user was created.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    email: str = Field(nullable=False, index=True)
    password_hash: str
    name: Optional[str] = None
    created_at: datetime = Field(default_factory=datetime.utcnow)
    preferred_tenant_id: Optional[UUID] = Field(default=None, nullable=True, index=True)

class Tenant(SQLModel, table=True):
    """Represents a Family (tenant) that groups data and users.

    Attributes:
        id: Unique tenant identifier.
        name: Human-readable tenant name.
        created_at: Timestamp when the tenant was created.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    name: str
    created_at: datetime = Field(default_factory=datetime.utcnow)

class Membership(SQLModel, table=True):
    """Association between a user (or invite) and a family (tennat).

    A membership links a user (or an invite email) to a tenant and assigns a role
    and status.

    Attributes:
        tenant_id: The tenant this membership belongs to.
        user_id: Optional user id; null for pending invites.
        user_email: Email used for invite flow when user_id is not set.
        role: Role of the membership (OWNER/MEMBER/VIEWER).
        status: Current membership status.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    tenant_id: UUID = Field(foreign_key="tenant.id", nullable=False, index=True)
    user_id: Optional[UUID] = Field(foreign_key="user.id", nullable=True, index=True)  # null for pending invites
    user_email: Optional[str] = Field(default=None, index=True)  # invite flow
    role: MembershipRole = Field(
        sa_column=Column(SAEnum(MembershipRole, name="membership_role"), nullable=False),
        default=MembershipRole.MEMBER,
    )
    status: MembershipStatus = Field(
        sa_column=Column(SAEnum(MembershipStatus, name="membership_status"), nullable=False),
        default=MembershipStatus.ACTIVE,
    )
    created_at: datetime = Field(default_factory=datetime.utcnow)

class Account(SQLModel, table=True):
    """A financial account owned by a user.

    Attributes:
        id: Unique account identifier.
        user_id: Owner user identifier.
        name: Account display name.
        type: Type of account (cash/debit/credit).
        currency: Account currency code.
        balance: Current numeric balance.
        created_at: Creation timestamp.
        updated_at: Last update timestamp.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    user_id: UUID = Field(foreign_key="user.id", nullable=False, index=True)
    name: str
    type: AccountType = Field(
        sa_column=Column(SAEnum(AccountType, name="account_type"), nullable=False),
        default=AccountType.CASH,
    )
    currency: Currency = Field(
        sa_column=Column(SAEnum(Currency, name="account_currency"), nullable=False),
        default=Currency.BRL,
    )
    balance: Decimal = Field(
        default=Decimal("0.00"),
        sa_column=Column(Numeric(18, 2), nullable=False),
    )
    created_at: datetime = Field(default_factory=datetime.utcnow)
    updated_at: datetime = Field(default_factory=datetime.utcnow)

class Category(SQLModel, table=True):
    """Category used to classify transactions within a tenant.

    Attributes:
        id: Category identifier.
        tenant_id: Tenant this category belongs to.
        name: Category name.
        parent_id: Optional parent category for hierarchical categorization.
        kind: Whether the category is an expense or income.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    tenant_id: UUID = Field(foreign_key="tenant.id", nullable=False, index=True)
    name: str
    parent_id: Optional[UUID] = Field(default=None, foreign_key="category.id")
    kind: CategoryKind = Field(
        sa_column=Column(SAEnum(CategoryKind, name="category_kind"), nullable=False),
    )
    created_at: datetime = Field(default_factory=datetime.utcnow)
    updated_at: datetime = Field(default_factory=datetime.utcnow)

class Transaction(SQLModel, table=True):
    """Represents a financial transaction recorded against an account.

    Attributes:
        id: Transaction identifier.
        tenant_id: Tenant context for multi-tenant isolation.
        account_id: Account associated with the transaction.
        category_id: Optional category classification.
        transaction_date: Date when the transaction occurred.
        transaction_type: Expense or income.
        amount: Monetary amount of the transaction.
        currency: Currency code for the amount.
        created_by: User who created the transaction.
        description: Optional free-text description.
        reconciled: Whether the transaction has been reconciled.
        source: Origin of the transaction (manual/recurring).
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    tenant_id: UUID = Field(foreign_key="tenant.id", nullable=False, index=True)
    account_id: UUID = Field(foreign_key="account.id", nullable=False, index=True)
    category_id: Optional[UUID] = Field(default=None, foreign_key="category.id", index=True)

    transaction_date: date = Field(nullable=False)
    transaction_type: TransactionType = Field(
        sa_column=Column(SAEnum(CategoryKind, name="transaction_type"), nullable=False),
        default=TransactionType.EXPENSE,
    )

    amount: Decimal = Field(sa_column=Column(Numeric(18, 2), nullable=False))
    currency: Currency = Field(
        sa_column=Column(SAEnum(Currency, name="transaction_currency"), nullable=False),
        default=Currency.BRL,
    )
    created_by: UUID = Field(foreign_key="user.id", nullable=False, index=True)

    description: Optional[str] = None
    created_at: datetime = Field(default_factory=datetime.utcnow)
    updated_at: datetime = Field(default_factory=datetime.utcnow)
    reconciled: bool = Field(default=False)
    source: TransactionSource = Field(
        sa_column=Column(SAEnum(TransactionSource, name="transaction_source"), nullable=False),
        default=TransactionSource.MANUAL,
    )

class AccountShare(SQLModel, table=True):
    """
    Links an account to a tenant (family). Controls visibility of balance (HIDDEN / VISIBLE)
    for members of the grantee tenant.
    """
    __table_args__ = (
        UniqueConstraint("account_id", "tenant_id", name="uq_account_share_account_tenant"),
    )

    id: UUID = Field(default_factory=uuid4, primary_key=True)
    account_id: UUID = Field(foreign_key="account.id", nullable=False, index=True)
    tenant_id: UUID = Field(foreign_key="tenant.id", nullable=False, index=True)
    visibility: ShareVisibility = Field(
        sa_column=Column(SAEnum(ShareVisibility, name="share_visibility"), nullable=False),
        default=ShareVisibility.HIDDEN,
    )
    granted_by: UUID = Field(foreign_key="user.id", nullable=False, index=True)
    granted_at: datetime = Field(default_factory=datetime.utcnow)
class RefreshToken(SQLModel, table=True):
    """Opaque refresh token stored hashed for long-lived session management.

    Attributes:
        id: Unique refresh token identifier (server-side).
        user_id: Owner user identifier.
        token_hash: Hashed opaque token value stored securely.
        issued_at: When the token was issued.
        expires_at: Expiration timestamp for the token.
        revoked: Whether the token has been revoked.
        device_info: Optional device description for the token.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    user_id: UUID = Field(foreign_key="user.id", nullable=False, index=True)
    token_hash: str
    issued_at: datetime = Field(default_factory=datetime.utcnow)
    expires_at: datetime
    revoked: bool = Field(default=False)
    device_info: Optional[str] = None

class Invite(SQLModel, table=True):
    """Represents an outstanding invite to join a tenant.

    Attributes:
        id: Invite identifier.
        tenant_id: Tenant the invite applies to.
        email: Email address invited.
        token_hash: Hashed invite token used to validate acceptance.
        role: Role assigned upon acceptance.
        expires_at: When the invite expires.
        consumed: Whether the invite token has been used.
    """
    id: UUID = Field(default_factory=uuid4, primary_key=True)
    tenant_id: UUID = Field(foreign_key="tenant.id", nullable=False, index=True)
    email: str
    token_hash: str
    role: MembershipRole = Field(
        sa_column=Column(SAEnum(MembershipRole, name="invite_role"), nullable=False),
        default=MembershipRole.MEMBER,
    )
    expires_at: datetime
    consumed: bool = Field(default=False)
    created_at: datetime = Field(default_factory=datetime.utcnow)
